# fastapi-seminar-assignment6

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  erd_link.py  main.py  pyproject.toml
tests/: conftest.py
tests/carts/: conftest.py  test_carts.py
tests/items/: conftest.py  test_items.py
tests/orders/: conftest.py  test_orders.py
tests/reviews/: conftest.py  test_reviews.py
tests/stores/: conftest.py  test_stores.py
tests/users/: conftest.py  test_users.py
wapang/: api.py  main.py  settings.py
wapang/app/auth/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py  settings.py  utils.py
wapang/app/carts/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
wapang/app/items/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
wapang/app/orders/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
wapang/app/reviews/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
wapang/app/stores/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
wapang/app/users/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
wapang/common/: exceptions.py
wapang/database/: async_connection.py  async_settings.py  connection.py  settings.py
wapang/database/alembic/: env.py
wapang/database/alembic/versions/: 2025_10_09-3ef7db329fcf_add_shop_and_items.py  2025_10_09-536d10e97590_add_shop_and_items.py  2025_10_09-bd5c09f86d12_initial_revision.py  (+2 more)
